# Skidbladnir

./: .eslintrc.js  .eslintrc.security.js  .gitignore  CLAUDE.md  LICENSE  MIGRATION_COMPLETE.md  MIGRATION_SUMMARY.md  QUICKSTART.md  README.md  Taskfile.yml  add_headers.sh  build-versions.json  commit_summary.txt  cucumber.js  docker-compose.prod.yml  go.mod  install.sh  jest.config.js  kanban.md  package.json  pyproject.toml  strategy.md  tdd-approach.md  test-summary.md  tsconfig.json
__mocks__/: FeatureFlagContext.js  MigrationService.js  ProviderService.js  TestCasePreviewComponent.js  TestCaseService.js  TestExecution.js  TestExecutionService.js  TransformationEngine.js  TransformationService.js  excel-csv-handler.js  feature-flags.js  fileMock.js  libxmljs2.js  react-i18next.js  react-json-tree.js  styleMock.js
cmd/: README.md
config/: .coveragerc  Taskfile.yml  coverage-thresholds.json  go.mod  jest.config.js  jest.ui.config.js  pytest.coverage.ini  pytest.ini  tdd-metrics-config.json  tsconfig.build.json  tsconfig.json  tsconfig.test.json
docs/: README.md  acceptance-testing.md  api-bridge-architecture.md  api-bridge-authentication.md  api-resilience-patterns.md  architecture-validation.md  binary-processor-large-testcases.md  c4-diagrams.md  clean-architecture-guide.md  containerization.md  development-guide.md  karate-test-syntax-guide.md  laptop-friendly-guide.md  local-llm-assistant.md  quick-start.md  security-audit-guidelines.md  tdd-approach.md  ui-implementation-summary.md  ui-test-plan.md
infra/: README.md
internal/: README.md
pkg/: README.md
(+623 files in other folders)
