[tool.poetry]
name = "skidbladnir-python"
version = "0.3.0-b65"
description = "Python components for Skidbladnir test asset migration platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    {include = "internal/python"},
    {include = "packages/*/python"}
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
pydantic = "^1.10.7"
httpx = "^0.24.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.11"
llama-cpp-python = "^0.1.77"
psycopg2-binary = "^2.9.6"
redis = "^4.5.4"
boto3 = "^1.26.133"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"